--- a/GHParallaxView/Base.lproj/Main.storyboard
+++ b/GHParallaxView/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,92 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GHParallaxView" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pzj-OH-SfE">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6bv-ao-0TQ" userLabel="Container">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="464.5"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="beachPett" translatesAutoresizingMaskIntoConstraints="NO" id="hwG-9o-p2p">
+                                                <rect key="frame" x="0.0" y="8" width="414" height="312"/>
+                                            </imageView>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bhe-es-RLa" userLabel="DescriptionView">
+                                                <rect key="frame" x="0.0" y="320" width="414" height="144.5"/>
+                                                <subviews>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="43" translatesAutoresizingMaskIntoConstraints="NO" id="I2N-VP-RII">
+                                                        <rect key="frame" x="20" y="20" width="374" height="104.5"/>
+                                                        <subviews>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="a title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2OQ-rx-koN">
+                                                                <rect key="frame" x="0.0" y="0.0" width="78.5" height="41"/>
+                                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tf4-74-kh5">
+                                                                <rect key="frame" x="0.0" y="84" width="86" height="20.5"/>
+                                                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <nil key="highlightedColor"/>
+                                                            </label>
+                                                        </subviews>
+                                                    </stackView>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                <constraints>
+                                                    <constraint firstItem="I2N-VP-RII" firstAttribute="leading" secondItem="bhe-es-RLa" secondAttribute="leading" constant="20" id="Wnh-jZ-MHp"/>
+                                                    <constraint firstAttribute="bottom" secondItem="I2N-VP-RII" secondAttribute="bottom" constant="20" id="YiQ-8M-cgs"/>
+                                                    <constraint firstAttribute="trailing" secondItem="I2N-VP-RII" secondAttribute="trailing" constant="20" id="oR9-tP-xA1"/>
+                                                    <constraint firstItem="I2N-VP-RII" firstAttribute="top" secondItem="bhe-es-RLa" secondAttribute="top" constant="20" id="whU-wF-iTm"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstItem="bhe-es-RLa" firstAttribute="top" secondItem="hwG-9o-p2p" secondAttribute="bottom" id="4m6-n1-09E"/>
+                                            <constraint firstItem="hwG-9o-p2p" firstAttribute="leading" secondItem="6bv-ao-0TQ" secondAttribute="leading" id="7iW-Qt-dsI"/>
+                                            <constraint firstAttribute="trailing" secondItem="hwG-9o-p2p" secondAttribute="trailing" id="fmB-JT-pMT"/>
+                                            <constraint firstItem="bhe-es-RLa" firstAttribute="leading" secondItem="6bv-ao-0TQ" secondAttribute="leading" id="gNF-im-1Zf"/>
+                                            <constraint firstAttribute="trailing" secondItem="bhe-es-RLa" secondAttribute="trailing" id="m6F-Sx-TMn"/>
+                                            <constraint firstItem="bhe-es-RLa" firstAttribute="top" secondItem="6bv-ao-0TQ" secondAttribute="top" constant="320" id="tQ1-SY-ySB"/>
+                                            <constraint firstAttribute="bottom" secondItem="bhe-es-RLa" secondAttribute="bottom" id="xBl-Qr-32l"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="6bv-ao-0TQ" firstAttribute="width" secondItem="Pzj-OH-SfE" secondAttribute="width" id="C0O-2h-1sI"/>
+                                    <constraint firstItem="6bv-ao-0TQ" firstAttribute="top" secondItem="Pzj-OH-SfE" secondAttribute="top" id="DIa-p5-bLE"/>
+                                    <constraint firstItem="6bv-ao-0TQ" firstAttribute="leading" secondItem="Pzj-OH-SfE" secondAttribute="leading" id="FdQ-M2-1Ok"/>
+                                    <constraint firstAttribute="bottom" secondItem="6bv-ao-0TQ" secondAttribute="bottom" id="T8v-MS-o0u"/>
+                                    <constraint firstAttribute="trailing" secondItem="6bv-ao-0TQ" secondAttribute="trailing" id="sG9-KG-ose"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="hwG-9o-p2p" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" priority="750" id="211-fr-L2Y"/>
+                            <constraint firstItem="Pzj-OH-SfE" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="fpH-R2-D5k"/>
+                            <constraint firstItem="Pzj-OH-SfE" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="mO0-Xv-ALu"/>
+                            <constraint firstItem="Pzj-OH-SfE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="oUT-g9-w3I"/>
+                            <constraint firstItem="Pzj-OH-SfE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="v2r-Xv-IcA"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="decriptionLabel" destination="Tf4-74-kh5" id="rDa-ce-0zR"/>
+                        <outlet property="titleLabel" destination="2OQ-rx-koN" id="ebC-YZ-0jD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="126.5625"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="beachPett" width="2213" height="1306"/>
+    </resources>
 </document>
